--- a/www/browse.html
+++ b/www/browse.html
@@ -20,10 +20,10 @@
                 </div>
             </div>
             <br>
-            <button type="button" onclick="state.sortViews()">Views</button>
-            <button type="button" onclick="state.sortVotes()">Votes</button>
-            <button type="button" onclick="state.sortCreated()">Created</button>
-            <button type="button" onclick="state.sortEdited()">Edited</button>
+            <button type="button" class="btn search-btn btn-outline-success mx-auto" onclick="state.sortViews()">Views</button>
+            <button type="button" class="btn search-btn btn-outline-success mx-auto" onclick="state.sortVotes()">Votes</button>
+            <button type="button" class="btn search-btn btn-outline-success mx-auto" onclick="state.sortCreated()">Created</button>
+            <button type="button" class="btn search-btn btn-outline-success mx-auto" onclick="state.sortEdited()">Edited</button>
 
             <button type="button" class="btn btn-outline-success mx-auto" style="border: 3px solid #f00 !important;"
                 onclick="state.clearSearch()">Clear Search / Clear Sort</button>
