--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,8 @@
         {{login.html}}
         {{signup.html}}
     </div>
-    <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;" id="background_iframe"></iframe>
+    <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
+        src="canvas.html?algorithm=background" id="background_iframe"></iframe>
     <script>
         var iframe = null;
         
