--- a/www/create.html
+++ b/www/create.html
@@ -15,7 +15,8 @@
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12"
                         style="height:512px;">
 
-                        <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;" id="create_preview_iframe"></iframe>
+                        <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
+                            src="canvas.html" id="create_preview_iframe"></iframe>
                     </div>
                 </div>
                 <br>
