--- a/www/edit.html
+++ b/www/edit.html
@@ -15,8 +15,7 @@
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12"
                         style="height:512px;">
 
-                        <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
-                            src="canvas.html" id="edit_preview_iframe"></iframe>
+                        <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;" id="edit_preview_iframe"></iframe>
                     </div>
                 </div>
                 <br>
