--- a/www/index.html
+++ b/www/index.html
@@ -585,7 +585,20 @@
                     $("#signup_button").removeClass("active")
                     $("#logout_button").removeClass("active")
 
-                    this.set_ui_algorithm(default_create_algorithm);
+                    var algorithm_query_parameter = getQueryVariable("algorithm");
+                    var algorithm = algorithm_query_parameter ? algorithm_query_parameter : "default";
+                    fetch('https://www.MetaHumanity.xyz/algorithms/'+algorithm+'.json')
+                    .then(function(response){
+                        response.json().then(function(val){
+                            this.set_ui_algorithm(val);
+                            this.preview_algorithm(algorithm);
+                        }.bind(this))
+                    }.bind(this))
+                    .catch(function(err){
+                        console.log(err);
+                        this.set_ui_algorithm(default_create_algorithm);
+                    }.bind(this));
+                    break;
                     break;
                 case pages.DELETE_ACCOUNT:
                     this.refresh_captchas();
