--- a/www/index.html
+++ b/www/index.html
@@ -585,10 +585,12 @@
                     $("#signup_button").removeClass("active")
                     $("#logout_button").removeClass("active")
 
-                    var algorithm = "default"
+                    var algorithm_query_parameter = getQueryVariable("fork");
+                    var algorithm = algorithm_query_parameter ? algorithm_query_parameter : "default";
                     fetch('https://www.MetaHumanity.xyz/algorithms/'+algorithm+'.json')
                     .then(function(response){
                         response.json().then(function(val){
+                            val.name = "Fork of "+val.name;
                             this.set_ui_algorithm(val);
                             this.preview_algorithm(algorithm);
                         }.bind(this))
