--- a/www/edit.html
+++ b/www/edit.html
@@ -14,8 +14,8 @@
                 <div class="row" style="height:512px;">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12"
                         style="height:512px;">
-                        <div style="position:absolute;width:100%;height:100%;font-size: 32px !important;color: #0f0; z-index: -10;" class="loading-indicator blink-white">Loading...</div>
-                        <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;" id="edit_preview_iframe"></iframe>
+                        <div style="position:absolute;width:100%;height:100%;font-size: 32px !important;color: #0f0; z-index: 1;" class="loading-indicator blink-white">Loading...</div>
+                        <iframe onload="$('.loading-indicator').hide()" sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;" id="edit_preview_iframe"></iframe>
                     </div>
                 </div>
                 <br>
