--- a/www/edit.html
+++ b/www/edit.html
@@ -26,8 +26,10 @@
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.preview_algorithm()"
                     class="btn btn-outline-success mx-auto">Preview</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.save_algorithm()"
-                    class="btn btn-outline-success mx-auto">Save</button>
+                    class="owned-content btn btn-outline-success mx-auto">Save</button>
                 <br>
+                <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.download_algorithm()"
+                    class="btn btn-outline-success mx-auto">Download Off-Line Version</button>
             </h1>
             <br>
             <h1 class="read_only"
