--- a/www/create.html
+++ b/www/create.html
@@ -21,9 +21,11 @@
                 <br>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.compile_algorithm()"
                     class="btn btn-outline-success mx-auto">Compile</button>
-                <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.fork_algorithm()"
-                    class="btn btn-outline-success mx-auto">Fork</button>
+                <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.save_algorithm()"
+                    class="btn btn-outline-success mx-auto">Save</button>
                 <br>
+                <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.download_algorithm()"
+                    class="btn btn-outline-success mx-auto">Download Off-Line Version</button>
             </h1>
             <br>
             <h1 class="read_only"
