--- a/www/index.html
+++ b/www/index.html
@@ -1218,6 +1218,10 @@
         
         GlobalState.prototype.preview_algorithm = function (algorithm) {
             iframe = document.getElementById(window.location.hash.substring(1)+"_preview_iframe");
+            iframe.onload = function(){
+                $('.loading-indicator').hide(); 
+                this.hide_popovers();
+            }.bind(this);
             iframe.src = "canvas.html?algorithm="+algorithm;
         }
 
