--- a/www/index.html
+++ b/www/index.html
@@ -267,6 +267,9 @@
             }.bind(this);
             this.websocket.onopen = function () {
                 this.show_logged_out_content();
+                if(window.location.hash != pages.EDIT &&
+                    window.location.hash != pages.CREATE)
+                    this.hide_popovers();
                 if (window.location.hash == pages.RECONNECT
                     || window.location.hash == pages.LOGOUT
                     || window.location.hash == pages.DELETE_ACCOUNT
