--- a/www/canvas.html
+++ b/www/canvas.html
@@ -27,8 +27,8 @@
   <div id="body" style="position:absolute; width:100%; height:100%;">
   </div>
   <script>
-    {{js/protobuf.js}}
-    {{js/jquery.min.js}}
+    //{{js/protobuf.js}}
+    //{{js/jquery.min.js}}
     window.$ = $;
 
     var userAlgorithm = null;
@@ -64,7 +64,7 @@
     function waitForProto(cb) {
 
       this.protocol = protobuf.parse(`
-      {{proto/messages.proto}}
+      //{{proto/messages.proto}}
       `).root;
       // Auth = this.protocol.lookupType("messages.Auth");
       // Video = this.protocol.lookupType("messages.Video");
