--- a/www/edit.html
+++ b/www/edit.html
@@ -29,7 +29,7 @@
                     class="owned-content btn btn-outline-success mx-auto">Save</button>
                 <br>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.download_algorithm()"
-                    class="btn btn-outline-success mx-auto">Download Off-Line Version</button>
+                    class="btn btn-outline-success mx-auto">Download Offline Version</button>
             </h1>
             <br>
             <h1 class="read_only"
