--- a/www/index.html
+++ b/www/index.html
@@ -2803,6 +2803,24 @@
             for (var i = 0; i < algorithm.pipeline.stages.length; i++)
                 this.add_stage(algorithm.pipeline.stages[i]);
         }
+
+        GlobalState.prototype.fork_algorithm = function(){
+            window.location.protocol+"//"+window.location.host+window.location.pathname+"?fork="+this.get_ui_algorithm().name.toLowerCase().replaceAll(" ","_")+pages.CREATE;
+            window.history.replaceState({}, document.title, removeURLParameter(removeURLParameter(window.location.href, "user"), "code"));
+        }
+        GlobalState.prototype.preview_algorithm = function(){
+            window.location.protocol+"//"+window.location.host+window.location.pathname+window.location.search+window.location.hash
+            window.history.replaceState({}, document.title, removeURLParameter(removeURLParameter(window.location.href, "user"), "code"));
+        }
+        GlobalState.prototype.save_algorithm = function(){
+            window.location.protocol+"//"+window.location.host+window.location.pathname+window.location.search+window.location.hash
+            window.history.replaceState({}, document.title, removeURLParameter(removeURLParameter(window.location.href, "user"), "code"));
+        }
+        GlobalState.prototype.download_algorithm = function(){
+            
+            window.history.replaceState({}, document.title, removeURLParameter(removeURLParameter(window.location.href, "user"), "code"));
+        }
+
         state = new GlobalState();
         on_resources_loaded();
     </script>
