--- a/www/index.html
+++ b/www/index.html
@@ -2805,8 +2805,9 @@
         }
 
         GlobalState.prototype.fork_algorithm = function(){
-            window.location.protocol+"//"+window.location.host+window.location.pathname+"?fork="+this.get_ui_algorithm().name.toLowerCase().replaceAll(" ","_")+pages.CREATE;
-            window.history.replaceState({}, document.title, removeURLParameter(removeURLParameter(window.location.href, "user"), "code"));
+            var new_url = window.location.protocol+"//"+window.location.host+window.location.pathname+"?fork="+this.get_ui_algorithm().name.toLowerCase().replaceAll(" ","_")+pages.CREATE;;
+            window.history.replaceState({}, document.title, new_url);
+            this.refresh_content(window.location.hash);
         }
         GlobalState.prototype.preview_algorithm = function(){
             window.location.protocol+"//"+window.location.host+window.location.pathname+window.location.search+window.location.hash
