--- a/www/edit.html
+++ b/www/edit.html
@@ -23,7 +23,7 @@
                     class="btn btn-outline-success mx-auto">Compile</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.fork_algorithm()"
                     class="btn btn-outline-success mx-auto">Fork</button>
-                <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.preview_algorithm()"
+                <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.goto_algorithm_preview()"
                     class="btn btn-outline-success mx-auto">Preview</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.save_algorithm()"
                     class="owned-content btn btn-outline-success mx-auto">Save</button>
