--- a/www/index.html
+++ b/www/index.html
@@ -567,7 +567,6 @@
                             response.json().then(function (val) {
                                 this.set_ui_algorithm(val);
                                 this.preview_algorithm(algorithm);
-                                this.hide_popovers();
                             }.bind(this))
                         }.bind(this))
                         .catch(function (err) {
@@ -603,9 +602,11 @@
                             }.bind(this))
                         }.bind(this))
                         .catch(function (err) {
-                            this.set_ui_algorithm(default_create_algorithm);
-                            this.compile_algorithm();
-                            this.hide_popovers();
+                            this.show_page(pages.CLIENT_ERROR, "Failed to fetch algorithm!", "Please try a different one.", true, function(){
+                                this.set_ui_algorithm(default_create_algorithm);
+                                this.compile_algorithm();
+                                this.hide_popovers();
+                            }.bind(this))
                         }.bind(this));
                     break;
                     break;
