--- a/www/edit.html
+++ b/www/edit.html
@@ -45,7 +45,7 @@
                         <br>
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <input disabled id="edit_algorithm_title" style="width:inherit; text-align:center; color:#fff;"
+                        <input disabled id="edit_algorithm_title" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
                             placeholder="Algorithm name..." value=""></input>
                         <br>
                         <br>
