--- a/www/index.html
+++ b/www/index.html
@@ -2809,7 +2809,8 @@
         }
 
         GlobalState.prototype.fork_algorithm = function(){
-            var new_url = window.location.protocol+"//"+window.location.host+window.location.pathname+"?fork="+this.get_ui_algorithm().name.toLowerCase().replaceAll(" ","_")+pages.CREATE;;
+            var algorithm = this.get_ui_algorithm().name.toLowerCase().replaceAll(" ","_");
+            var new_url = window.location.protocol+"//"+window.location.host+window.location.pathname+"?algorithm="+algorithm+"&fork="+algorithm+pages.CREATE;;
             window.history.replaceState({}, document.title, new_url);
             document.getElementById(window.location.hash.substring(1) + "_button").click();
             this.refresh_content(window.location.hash);
