--- a/www/browse.html
+++ b/www/browse.html
@@ -5,7 +5,7 @@
         <br>
         <h1
             style=" padding-top: 14px; padding-bottom: 14px; text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-            
+
             <a>Search Criteria:</a>
             <br>
             <input id="search_criteria" style="width:inherit; text-align:center; color:#fff; text-align: left;"
@@ -22,8 +22,9 @@
             <br>
             <br>
             <button type="button" class="btn search-btn btn-outline-success mx-auto"
-                style="border: 3px solid #f00 !important;" onclick="state.clearSearch()">Clear Search / Clear
-                Sort</button>
+                style="border: 3px solid #f00 !important;" onclick="state.clearSearch()">Clear Search/Sort</button>
+            <button type="button" class="btn search-btn btn-outline-success mx-auto"
+                style="border: 3px solid #0f0 !important;" onclick="state.clearSearch()">Execute Search/Sort</button>
             <br>
             <br>
             <button type="button" class="btn search-btn btn-outline-success mx-auto" style="width:10%!important;"
