--- a/www/browse.html
+++ b/www/browse.html
@@ -22,9 +22,9 @@
             <br>
             <br>
             <button type="button" class="btn search-btn btn-outline-success mx-auto"
-                style="border: 3px solid #f00 !important;" onclick="state.clearSearch()">Clear Search/Sort</button>
+                style="border: 3px solid #f00 !important;" onclick="state.clearSearch()">Clear</button>
             <button type="button" class="btn search-btn btn-outline-success mx-auto"
-                style="border: 3px solid #0f0 !important;" onclick="state.clearSearch()">Execute Search/Sort</button>
+                style="border: 3px solid #0f0 !important;" onclick="state.clearSearch()">Execute</button>
             <br>
             <br>
             <button type="button" class="btn search-btn btn-outline-success mx-auto" style="width:10%!important;"
