--- a/www/browse.html
+++ b/www/browse.html
@@ -21,10 +21,8 @@
                 onclick="state.sortEdited()">Edited</button>
             <br>
             <br>
-            <button type="button" class="btn search-btn btn-outline-success mx-auto"
-                style="border: 3px solid #f00 !important;" onclick="state.clearSearch()">Clear</button>
-            <button type="button" class="btn search-btn btn-outline-success mx-auto"
-                style="border: 3px solid #0f0 !important;" onclick="state.clearSearch()">Execute</button>
+            <button type="button" class="btn btn-outline-danger mx-auto" onclick="state.clearSearch()">Clear</button>
+            <button type="button" class="btn btn-outline-success mx-auto" onclick="state.clearSearch()">Execute</button>
             <br>
             <br>
             <button type="button" class="btn search-btn btn-outline-success mx-auto" style="width:10%!important;"
