--- a/www/browse.html
+++ b/www/browse.html
@@ -8,8 +8,10 @@
 
             <a>Search Criteria:</a>
             <br>
-            <input id="search_criteria" style="width:inherit; text-align:center; color:#fff; text-align: left;"
+            <br>
+            <input id="search_criteria" style="width:inherit; text-align:center !important; color:#fff; text-align: left;"
                 placeholder="Enter search criteria..." value="">
+            <br>
             <br>
             <button type="button" class="btn search-btn btn-outline-success mx-auto"
                 onclick="state.sortViews()">Views</button>
