--- a/www/create.html
+++ b/www/create.html
@@ -68,8 +68,21 @@
                         <textarea id="edit_description" rows="8" style="text-align:left; color:#fff;"
                             placeholder="Enter description here..." value="{algorithm.description}"></textarea>
                     </div>
+                    <br>
                 </div>
-                <br>
+                <div class="row" style="display: none;">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center; color:#0f0;">
+                        <a>Algorithm Author:</a>
+                        <br>
+                        <br>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <input disabled id="edit_algorithm_author" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
+                            placeholder="Author name..." value=""></input>
+                        <br>
+                        <br>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">
                         <a>Public:</a>
