--- a/www/edit.html
+++ b/www/edit.html
@@ -39,7 +39,7 @@
             <h1 onclick="profileClicked(algorithm.owner)" class="read_only"
                 style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                 <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center; color:#0f0;">
                         <a>Algorithm Title:</a>
                         <br>
                         <br>
@@ -49,16 +49,19 @@
                             placeholder="Algorithm name..." value=""></input>
                         <br>
                         <br>
-
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <a style="color:#FFF!important; ">Author:</a>&nbsp;
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center; color:#0f0;">
+                        <a>Algorithm Author:</a>
+                        <br>
+                        <br>
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <p id="edit_algorithm_author">{algorithm.owner.name}
-                        </p>
+                        <input disabled id="edit_algorithm_author" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
+                            placeholder="Author name..." value=""></input>
+                        <br>
+                        <br>
                     </div>
                 </div>
                 <div class="row">
@@ -121,7 +124,7 @@
                 <a style="color:#FFF!important; ">Comments:</a>
             </h1>
         </div>
-        <div class="col-0 col-sm-0 col-md-0 col-lg-1">
+        <div style="z-index: -10;" class="col-0 col-sm-0 col-md-0 col-lg-1">
         </div>
     </div>
     <div class="split row right" style="text-align: center;">
@@ -135,7 +138,7 @@
             </h1>
             <h1 class="editable"
                 style=" padding-top: 14px; padding-bottom: 14px; text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                <div class="row">
+                <div class="row owned-content">
                     <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">
                         <a>Public:</a>
                     </div>
